@@ -2,17 +2,20 @@
 Hash: SHA512
 
 DIST aufs-sources-3.7.3.tar.xz 142984 SHA256 f2d307363f4c4c8d991ada374134ad97c05ed7a9fc3f3e8403308bc0ff7fcd4d SHA512 ae894352f96afa99911e8de47dc946e60d3339538405e79894e699ec11226ca879f98f8c6444703daf3baaa84dac2a15a18fe5d34b2c3d1a72eb426e68c0b8b4 WHIRLPOOL d76e7e5c2ec60ee56e55ba83eeb417adfc03eadd9d9a3817452eeb95e9d751c804fe7e07004ce4e43e5d29ae5a511c711b6cba8dc72e39d6a9e3da0030a65113
+DIST aufs-sources-3.7.6.tar.xz 143064 SHA256 1360d182b163698725aa0d4cbc61f545ef7adff6fc72166a70232afe0b793da4 SHA512 e41c94e2beedf3d550628e3436cc53bb39ccb40b9ece8bcff107296bdfebfed1a6db419d1082863014a6385566104ea16e91e1df876e9e6c2938bb3fc31a011f WHIRLPOOL 38f5f2f0848bf60b940b0868ba7c887c8ab82a8a17aab07aef07b1e1a8308cc20a46d0f4b75d698fa35ee3d98388ee23648ba69db0f4e6cbdef1a49158136ae1
 DIST aufs-util-3.6.tar.xz 76104 SHA256 aa5e8275d33933cbbacc68a65d0b48812917d38e3839b2411f76c0efc3ddcb37 SHA512 e73513a549879c26e354bf642c0fe08d7d98299f877519dc654045d6d8d145df7f6cddbd7f0922fbcbd250d9118e505775328aaf7bbdfc0b507d5e93fab69f36 WHIRLPOOL ea0767baf7ef759e1f018f9b6467ce0e64f1684de7c494fca73fd9b79823f2b36924cceea958d9890b22699b09b632d47afcf95bd8cd1510bad0f4c488966851
+DIST aufs-util-3.7.6.tar.xz 76264 SHA256 6a254233d3b0deee00b59c3b792cd425a7f9a7f570468f345500bfbf65041fd6 SHA512 9530d3ac06cc7178fdd321bcf1d5591e6e2f679a5f12794d6481d5ea6fa2ac1f4355a3bf5dfc2e744b26c2be7fa8e2300b62f2aa7ddc5744c9686e0bd192e1c2 WHIRLPOOL d051956c5f6174466d5c704ae6931f9294b47026940a7903df81740b35740079ac68bc3a35c0737a7712b3aeaa3dd7f02e0f70aebd5d1f97a5116ace43572d12
 DIST aufs-util-3.7.tar.xz 76252 SHA256 1353f2d73443f921ca9968cf4a4ce281c0c22ee4c4b506179757275b74bc3cc2 SHA512 765a12d0d35a97efc81d16badca5ec45fc92ceb21666a21788e76de8a05d408ff501fcc5703ea80f77db78ff36e7772ef922804817ed695f0fdd10b9e44e4457 WHIRLPOOL 103e1ba3d58b24418d7e43d3097f51160d4443d5e89fae5c1c44937d2bc2b05160fdf2d7c835a25072a1873ef6e547b53d122a4800d6c519992027dae3d07f87
 EBUILD aufs-util-3.6.ebuild 1280 SHA256 27abdb361f0556896c7431c3686d59c0705cef0cc0203c0b87655aef303f302b SHA512 6bdaf72a3724df26e7c59eae58e111db6ce124598d075c3aa29e8426db1693c9dab8c6cef99a972126150b37a81418102574e868654071a6976b0744cf6a34ce WHIRLPOOL 11f49acc87fcef624b2f90e7aaf2a9db97396f9c529d65df7e989b68c5d612341f9af5a018728eb1ef5bfa98648196f458502271980ed5eb4ab1a402fe570741
 EBUILD aufs-util-3.7-r1.ebuild 1366 SHA256 4808a141e0c17f80c2fe36640d132cfdb1476155102cee108f51ab32c9d269bd SHA512 bf3fecc798050cf9cc0a4663030d43647f4ee30957af204f41f45e60dba275bf463d1267f277839089711bbbf572106c76439751315401e71956dbc4616673a7 WHIRLPOOL e527c4ce18f4680f52e0180f6fd276bc4482063bac7a934210ff1dd178315ab2f8eef832b77cd5d7df149cf840d21bcf6a663e2601b3e4190c111ab5f75b188c
+EBUILD aufs-util-3.7.6.ebuild 1365 SHA256 8d71e3fe5596f248336b2a1ffc100d9d5b3bd99bac174774706b0aab985a4272 SHA512 12a03a8c95fa20501e77ab384d5d18049e46d9027452c22e9279afac751e0e74a3e5b83ad8948eadd6db48233b3c131fe174e9584568bb6e58028ed51f62e28e WHIRLPOOL bbe3b08f79ea781b2d73dd6a4f5bbe7978e60af8155e4a8d2e0d4f40cc8f55fff59e386f8c0ef819bb18d385015bcf43e6d39fe4fc6dee64794b66ee576e50e6
 EBUILD aufs-util-3.7.ebuild 1285 SHA256 d5abeb9fd44f6ea9a9396b729440c74d04b5ac55fb6fc71b43471ad1fa16dbd3 SHA512 0a77d64b2e06398239aee87bbf5b04f391ac1547106ec4b892acf6fb8e944d020ccee850ce8e3be6a69ee6b816d96da4a107e5bbf06af148c5e9bdc45c8bae5e WHIRLPOOL 4e3d178878bccd0d63c70b2a16e2c7d291851a2e57bd642853d82b9e3562a5b2e3e6a995919ba0fae900f158f162f0704980a30dfd349cb5da97fb2dbd6764e2
-MISC ChangeLog 1251 SHA256 e11af1c2bba194b060454c9b3a0d825f1cb45fd1777e6483213b8a372e2db3f3 SHA512 3e8c4c800098ba1cbc3d432f48261b1c72363c0ce44fbd0093d4fa41899e936e2339a80290ddf43348580d1fb75fb349a86a485f8dc37de3d83f053a1316e8cd WHIRLPOOL 92b3f074346372353eac7ee30d08581c0e43c744dceea582e2b56546b313a269b045ca625f64bbbd725348f690cdbd3dc72b25afc9de7f5689fb74b1b41bea26
+MISC ChangeLog 1371 SHA256 8b352effacb99bf7a228b444776b90cd5788817549c856b55b537198e741e3e3 SHA512 f783486e4f9110ab86249b4777e851e9b4df90e11a8281c29df1a2c554cd88948b321a13eba827136cce8def556e579595010ded369ec4fc6a3db033e3f358df WHIRLPOOL fa4d011178105df87f2183294edd5b25d6d0aa8c11cff0e5b66b1a633037c7be67e756734fdbeae9a922b5b9e9db64576f3beb091805e742c457bb7ddf99cec6
 MISC metadata.xml 205 SHA256 b4660d1f4b47c8c40fc6f986791c6da3f0d7513fe4489a0d2bbb83346dcb1f5b SHA512 0e0b6e89b125b4849b4164e7cabb5297ae930c4db499c6685c3852a60e209418c26eb33e452a0a78e800c960ac5032f97d436bc3b7266a0ac76092f6f2595d11 WHIRLPOOL dc3dc7c840a6640b42e3fc981c95d0a8e43d3b5834f447a09deebc1b35dbb26e48c3d85db73725c42d2036edd9f141fb02a3a9d61522861f4e97e3e974987473
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREKAAYFAlD/tUIACgkQgAnW8HDreRbf9wCfWhX6XBUe147oUkmjfcY2PuQn
-2H0An0WJq7WRjZsIFwegmK8olGW3s2/F
-=sT0Y
+iEYEAREKAAYFAlETZWIACgkQgAnW8HDreRaiPACfYodgMvMdhSZ/5s8N5bbY+z/N
+fNgAoKYfaYUUYIPndEcYNn/tZHNPelJp
+=pmtB
 -----END PGP SIGNATURE-----
