@@ -1,6 +1,11 @@
 # ChangeLog for sys-fs/aufs-util
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/aufs-util/ChangeLog,v 1.7 2013/01/23 10:02:41 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/aufs-util/ChangeLog,v 1.8 2013/02/07 08:26:48 jlec Exp $
+
+*aufs-util-3.7.6 (07 Feb 2013)
+
+  07 Feb 2013; Justin Lecher <jlec@gentoo.org> +aufs-util-3.7.6.ebuild:
+  Version BUmp
 
   23 Jan 2013; Justin Lecher <jlec@gentoo.org> aufs-util-3.7-r1.ebuild:
   Don't depend on the kernel sources
